tests/baselines/reference/parserForInStatement1.d.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Statements/parserForInStatement1.d.ts (2 errors) ====
    for (var i in e) {
    ~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
                  ~
!!! error TS2304: Cannot find name 'e'.
    }